Change gmaps plugin for markers and change slider, not finish

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,6 @@
 <script>
 $(function() {
     var home;
-    home = new PhotoBook.Views.Home($('#map'));
+    home = new PhotoBook.Views.Home('#map');
 });
 </script>
