--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#mcontainer{
+	width: 350px;
+	height: 150px;
+}
+.marker_container .item{
+  margin: 3px;
+}
+.marker_container .item img{
+  display: block;
+  width: 100px;
+  height: 100px;
+}
