--- a/app/views/images/_image_map_marker_content.html.erb
+++ b/app/views/images/_image_map_marker_content.html.erb
@@ -1,11 +1,9 @@
 <div id="mcontainer">
-	<div class="flexslider" id='<%= name %>'>
-		<ul class="slides">
-			 <% images.each do |img| %>
-				<li>
-				    <%= image_tag img.file.url(:thumb) %>
-				</li>
-			 <%end%>
-		 </ul>
-	</div>
+  <div id='<%= name %>'>
+    <% images.each do |img| %>
+      <div>
+        <div class="image"><img data-lazy="<%= img.file.url(:thumb) %>"/></div>
+      </div>
+    <%end%>
+  </div>
 </div>
