--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-md-12">
-    <%= render 'images/images_list', images: @images %>
+    <%= render 'images_list', images: @images %>
   </div>
 </div>>
