--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the tags controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.select2-container {
+  width:100%;	
+}
+
+.select2-container a.select2-choice {
+  font-size: 14px;
+  height: 38px;
+  padding: 8px 12px;
+  line-height: 1.42857;
+}
+
+.select2-container .select2-choice .select2-arrow {
+  padding-top:6px;
+}
