--- a/app/views/shared/_global_nav.html.erb
+++ b/app/views/shared/_global_nav.html.erb
@@ -18,9 +18,10 @@
             <li ><%= link_to "New Image", new_image_path %></li>
 
           </ul>
-          <form class="navbar-form navbar-left" role="search">
+          <form class="navbar-form navbar-left" role="search" action='<%= search_path %>'>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search by tags">
+              <select id="search_by_tags" name="tags[]" class="form-control" multiple="multiple">
+              </select>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
