--- a/app/views/images/_image_fields.html.erb
+++ b/app/views/images/_image_fields.html.erb
@@ -1,24 +1,34 @@
 <% unless f.object.persisted? %>
-<div class='row'>
-  <div class="col-md-12">
-      <h2>Image</h2>
-      <div class="form-group">
-         <%= f.label :file %>
-         <%= f.file_field :file, class: "form-control" %>
-      </div>
-      <div class="form-group">
-         <%= f.label :description %>
-         <%= f.text_field :description, class: "form-control", data: { field: 'desc' } %>
-      </div>
-      <div class="form-group">
-        <%= f.label :tags %>
-        <select id="select_change" name="select_change" class="form-control" multiple="multiple" data-field="tag">
-        </select>
-      </div>
+<div class="panel panel-default nested-fields">
+  <div class="panel-heading">
+    <h3 class="panel-title">New Image</h3>
   </div>
-
-  <%= f.hidden_field :lat, data: { field: 'lat' } %>
-  <%= f.hidden_field :lng, data: { field: 'lng' } %>
-  <%= link_to_remove_association "remove image", f %>
+  <div class="panel-body">
+    <div class='row'>
+      <div class="col-md-12">
+          <h2>Image</h2>
+          <div class="form-group">
+             <%= f.label :file %>
+             <%= f.file_field :file, class: "form-control" %>
+          </div>
+          <div class="form-group">
+             <%= f.label :description %>
+             <%= f.text_field :description, class: "form-control", data: { field: 'desc' } %>
+          </div>
+          <div class="form-group">
+            <%= f.label :tags %><br>
+            <select id="select_change" name="select_change" class="form-control" multiple="multiple" data-field="tag">
+            </select>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel-footer">
+    <%= f.hidden_field :lat, data: { field: 'lat' } %>
+    <%= f.hidden_field :lng, data: { field: 'lng' } %>
+    <%= link_to_remove_association f, {class: "btn btn-default btn-lg"} do %>
+      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+    <%end%>
+  </div>
 </div>
 <%end%>
