--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,15 +1,27 @@
 <div class='row'>
   <div class="col-md-6">
     <%= form_for(@user, url: images_path, method: :post, html: { multipart: true }) do |f| %>
-        <div id="images">
-          <%= f.fields_for :images do |image| %>
-            <%= render 'image_fields', f: image %>
-          <%end%>
+      <div class="panel panel-default">
+        <div class="panel-heading">Add images</div>
+        <div class="panel-body" id="images">
+            <%= f.fields_for :images do |image| %>
+              <%= render 'image_fields', f: image %>
+            <%end%>
+            <div class='row'>
+            <div class="col-xs-6">
+              <%= link_to_add_association f, :images, {class: 'btn btn-default btn-lg'} do %>
+                Add New <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+              <%end%>
+            </div>
+            <div class="col-xs-6">
+              <button type="submit" class='btn btn-default btn-lg'>
+                Save <span class="glyphicon glyphicon-floppy-save" aria-hidden="true"></span>
+              </input>
+            </div>
+          </div>
         </div>
-        <div class="links">
-          <%= link_to_add_association 'Add New Image', f, :images %>
-        </div>
-        <%= f.submit %>
+        
+      </div>
     <%end%>
   </div>
   <div class="col-md-6">
